Fix page shifting of notes card again

--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -267,13 +267,13 @@ h4 {
 
 #notesText {
   white-space: pre-wrap;
-  height: calc(292px - 2vh);
+  height: 292px;
   overflow-y: auto;
 }
 
 #notesTextEmpty {
   font-style: italic;
-  height: calc(292px - 2vh);
+  height: 292px;
 }
 
 #stopModalCloseButton {
@@ -702,10 +702,7 @@ button:focus {
   border-radius: 2px;
   position: relative;
   width: 100%;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-  padding-left: 1vh;
-  padding-right: 1vh;
+  padding: 1vh;
 }
